var searchData=
[
  ['data_5floss_0',['DATA_LOSS',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a9f21c5c424a73be49eb7d5182d3f6551',1,'catena']]],
  ['deadline_5fexceeded_1',['DEADLINE_EXCEEDED',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a42ac065963ecd3a595bbe04eff7582e0',1,'catena']]],
  ['decompress_2',['decompress',['../classcatena_1_1REST_1_1AssetRequest.html#ac211dae0d9dc663d2238caa337bc1d54',1,'catena::REST::AssetRequest']]],
  ['default_5fmax_5flength_3',['default_max_length',['../classcatena_1_1common_1_1Device.html#a20af39d8281641989a7be59ad2e69cff',1,'catena::common::Device::default_max_length()'],['../classcatena_1_1common_1_1IDevice.html#a9517a43b5794942e40c6f832443d8533',1,'catena::common::IDevice::default_max_length()']]],
  ['default_5ftotal_5flength_4',['default_total_length',['../classcatena_1_1common_1_1Device.html#a35f3faa9889a712105ae111fd374227b',1,'catena::common::Device::default_total_length()'],['../classcatena_1_1common_1_1IDevice.html#af0932dc3bb5bb73dda7db8679b00a831',1,'catena::common::IDevice::default_total_length()']]],
  ['definecommand_5',['definecommand',['../classcatena_1_1common_1_1ParamWithValue.html#ab34bf2ddcb69261faa8a91e9210462bc',1,'catena::common::ParamWithValue::defineCommand()'],['../classcatena_1_1common_1_1ParamDescriptor.html#a68362878ee51288be48a6f5cdc71aa82',1,'catena::common::ParamDescriptor::defineCommand()'],['../classcatena_1_1common_1_1IParamDescriptor.html#a72a6a3de31505714ffd91ef90d1ffc96',1,'catena::common::IParamDescriptor::defineCommand()'],['../classcatena_1_1common_1_1IParam.html#a0154707d5a391b499a9c834b3471f1d2',1,'catena::common::IParam::defineCommand()']]],
  ['deflate_5fcompress_6',['deflate_compress',['../classcatena_1_1REST_1_1AssetRequest.html#a2229160c0a38990631083592c3f0d2c2',1,'catena::REST::AssetRequest']]],
  ['deflate_5fdecompress_7',['deflate_decompress',['../classcatena_1_1REST_1_1AssetRequest.html#a7675741f81a595525a64de9b8166d9d9',1,'catena::REST::AssetRequest']]],
  ['dependencies_8',['dependencies',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2linux__toolchain.html#autotoc_md20',1,'Dependencies'],['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2windows__toolchain.html#autotoc_md44',1,'Dependencies'],['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2macos__toolchain.html#autotoc_md33',1,'Dependencies']]],
  ['deprecated_20list_9',['Deprecated List',['../deprecated.html',1,'']]],
  ['deregisterconnection_10',['deregisterconnection',['../classcatena_1_1common_1_1ConnectionQueue.html#acdcc0a76f830386831968f3d80184911',1,'catena::common::ConnectionQueue::deregisterConnection()'],['../classcatena_1_1common_1_1IConnectionQueue.html#a57258bd6a9e68c4764a614d78793fc52',1,'catena::common::IConnectionQueue::deregisterConnection()']]],
  ['deregisteritem_11',['deregisteritem',['../classcatena_1_1gRPC_1_1IServiceImpl.html#a752fc6fa2b5761a8e27e85924ebee9be',1,'catena::gRPC::IServiceImpl::deregisterItem()'],['../classcatena_1_1gRPC_1_1ServiceImpl.html#a5c3930d161d5d774fe137909fc61511c',1,'catena::gRPC::ServiceImpl::deregisterItem()']]],
  ['detail_5flevel_12',['detail_level',['../classcatena_1_1common_1_1IDevice.html#afb60030c822f844ea26021c88e561e87',1,'catena::common::IDevice::detail_level(const DetailLevel_e detail_level)=0'],['../classcatena_1_1common_1_1IDevice.html#a01f4337f08896e3add24fdf57ec6afb3',1,'catena::common::IDevice::detail_level() const =0'],['../classcatena_1_1common_1_1Device.html#a482a7209981bcba1a97a190cbb4a98d9',1,'catena::common::Device::detail_level() const override'],['../classcatena_1_1common_1_1Device.html#af6e255366e3ee77a6fdd573e1669e956',1,'catena::common::Device::detail_level(const DetailLevel_e detail_level) override']]],
  ['detaillevel_13',['detaillevel',['../classcatena_1_1REST_1_1ISocketReader.html#a73e5c7392324c163c6053c62594738dd',1,'catena::REST::ISocketReader::detailLevel()'],['../classcatena_1_1REST_1_1SocketReader.html#a7f2402b9309f2c6cc1f3895b3efe29aa',1,'catena::REST::SocketReader::detailLevel()']]],
  ['detaillevel_5f_14',['detailLevel_',['../classcatena_1_1common_1_1Connect.html#a7a879b1ef16b80e48af3a923012bd28b',1,'catena::common::Connect']]],
  ['detaillevel_5fe_15',['detaillevel_e',['../classcatena_1_1common_1_1Device.html#a76d5085676e5298e9a474c5af3ad4511',1,'catena::common::Device::DetailLevel_e'],['../classcatena_1_1common_1_1IDevice.html#a4da29ef35ad7e6d0f8bcf000ce078097',1,'catena::common::IDevice::DetailLevel_e']]],
  ['device_16',['device',['../classcatena_1_1common_1_1Device.html#a1c593cfc0f994c7fa52623d378e89551',1,'catena::common::Device::Device()=default'],['../classcatena_1_1common_1_1Device.html#a8f84a75a974d56afcfe317ed29503f25',1,'catena::common::Device::Device(uint32_t slot, Device_DetailLevel detail_level, std::vector&lt; std::string &gt; access_scopes, std::string default_scope, bool multi_set_enabled, bool subscriptions)'],['../classcatena_1_1common_1_1Device.html',1,'catena::common::Device']]],
  ['device_2eh_17',['Device.h',['../Device_8h.html',1,'']]],
  ['devicerequest_18',['devicerequest',['../classcatena_1_1gRPC_1_1DeviceRequest.html',1,'catena::gRPC::DeviceRequest'],['../classcatena_1_1REST_1_1DeviceRequest.html#a509376dc29c763653144378466a5a695',1,'catena::REST::DeviceRequest::DeviceRequest()'],['../classcatena_1_1gRPC_1_1DeviceRequest.html#ae838eb6ffeecdc2af2ed57dc97ebc475',1,'catena::gRPC::DeviceRequest::DeviceRequest()'],['../classcatena_1_1REST_1_1DeviceRequest.html',1,'catena::REST::DeviceRequest']]],
  ['devicerequest_2eh_19',['devicerequest.h',['../REST_2include_2controllers_2DeviceRequest_8h.html',1,'(Global Namespace)'],['../gRPC_2include_2controllers_2DeviceRequest_8h.html',1,'(Global Namespace)']]],
  ['deviceserializer_20',['DeviceSerializer',['../classcatena_1_1common_1_1Device_1_1DeviceSerializer.html',1,'catena::common::Device']]],
  ['displaystrings_21',['displaystrings',['../classcatena_1_1common_1_1PolyglotText.html#a135fed58709cf256ea8d353dd03060f8',1,'catena::common::PolyglotText::displayStrings()'],['../classcatena_1_1common_1_1IPolyglotText.html#a4ec781bbc3a10f581d603b0ae3d27b90',1,'catena::common::IPolyglotText::displayStrings()']]],
  ['dms_22',['dms',['../classcatena_1_1gRPC_1_1ServiceConfig.html#ac1bb8d26379657af6ef924aa70a19ec8',1,'catena::gRPC::ServiceConfig::dms'],['../classcatena_1_1REST_1_1ServiceConfig.html#a6177ce845e9d3b50b4ae2d7fb218b258',1,'catena::REST::ServiceConfig::dms']]],
  ['dms_5f_23',['dms_',['../classcatena_1_1common_1_1Connect.html#adfe7d4330809b53c666e5617872afa5c',1,'catena::common::Connect::dms_'],['../classcatena_1_1gRPC_1_1MultiSetValue.html#a2bdf6fec3e8fc6fdcb5ef0bbfd270949',1,'catena::gRPC::MultiSetValue::dms_'],['../classcatena_1_1REST_1_1AssetRequest.html#afc3899b01c1e95ee880cd0834e3d849d',1,'catena::REST::AssetRequest::dms_'],['../classcatena_1_1REST_1_1MultiSetValue.html#a63520b538473cf2f058eb32171b3bedf',1,'catena::REST::MultiSetValue::dms_']]],
  ['do_5fnot_5fuse_24',['DO_NOT_USE',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a6bc18fb128049a978291c7688d57456f',1,'catena']]],
  ['docker_25',['Setting up Catena Service(s) with Docker',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md15',1,'']]],
  ['docker_20with_20the_20catena_20c_20sdk_26',['Using Docker With The Catena C++ SDK',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html',1,'']]],
  ['doxygen_27',['doxygen',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2linux__toolchain.html#autotoc_md23',1,'Optionally Install doxygen'],['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2macos__toolchain.html#autotoc_md37',1,'Optionally install doxygen'],['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2windows__toolchain.html#autotoc_md48',1,'Optionally Install doxygen']]]
];
